# gittest

./: CMakeCache.txt  README.md  build.ninja  cmake_install.cmake  combined.txt  gameOutline.txt  gource.config  gource_batch.ps1  log1.txt  serer.txt  version.rc
build2/: .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build_bak/: .ninja_deps  .ninja_log  build.ninja  main.ilk
gource/: captions.txt  gource_batch.ps1  log1.txt  log2.txt
headers/: GameScreen.h  OptionsScreen.h  topMenu.h
src/: AudioManager.cpp  CMakeLists.txt  GameScreen.cpp  NetworkManager.cpp  OptionsScreen.cpp  TopMenu.cpp  main.cpp
src/headers/: AudioManager.h  GameScreen.h  NetworkManager.h  OptionsScreen.h  Time.h
